set up basis for three card reading

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
     <script defer src="major.arcana.js"></script>
     <script defer src="minor.arcana.js"></script>
     <script defer src="reading.factory.js"></script>
+    <script defer src="three.card.js"></script>
+    <script defer src="loading.js"></script>
 </head>
 <body ng-app="TarotApp">
     <navbar></navbar>
