--- a/js/home.html
+++ b/js/home.html
@@ -2,7 +2,7 @@
 	<div class="row">
       <div class="col l5 offset-l7 m5 offset-m7 s12">
       	<h1 class="intro">Discover the Tarot</h1>
-      	<div id="intro-button" class="tarot-button">
+      	<div ng-click="consult()" id="intro-button" class="tarot-button">
       		<span>Consult the Cards</span>
       	</div>
       </div>
