set up the modal for the single card reading

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <script defer src="reading.factory.js"></script>
     <script defer src="three.card.js"></script>
     <script defer src="loading.js"></script>
+    <script defer src="one.card.js"></script>
 </head>
 <body ng-app="TarotApp">
     <navbar></navbar>
