--- a/js/arcana.html
+++ b/js/arcana.html
@@ -17,8 +17,8 @@
 				<div ng-click="openModal(card)" class="tarot-explanation">
 					<div class="description">
 						<h3>{{card.name}}</h3>
-						<p>{{card.upright}}</p>
-						<p>{{card.reversed}}</p>
+						<p class="upright">{{card.upright}}</p>
+						<p class="reversed">{{card.reversed}}</p>
 					</div>
 					
 					<img class="tarot-spread" src="{{card.image}}">
