created and added a basic footer to the reading states

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Tarot</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="stylesheet" type="text/css" href='magic.min.css'>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.8/css/materialize.min.css"> 
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
     <script defer src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-animate.min.js"></script>
@@ -23,6 +24,7 @@
     <script defer src="three.card.js"></script>
     <script defer src="loading.js"></script>
     <script defer src="one.card.js"></script>
+    <script defer src="footer.js"></script>
 </head>
 <body ng-app="TarotApp">
     <navbar></navbar>
