--- a/js/three-card.html
+++ b/js/three-card.html
@@ -2,7 +2,7 @@
 	<div class="row">
 		<h1 class="intro">Your Three-Card Reading</h1>
 		<h2 class="instructions">Click on each individual card to gain more insight</h2>
-		<div ng-repeat="card in cards" class="col s12 m4 l2 offset-l1">
+		<div ng-repeat="card in cards" class="col s12 m4 l4">
 			<div class="tarot-explanation">
 				<div class="description">
 					<h3>{{card.card.name}}</h3>
@@ -15,4 +15,5 @@
 			</div>
 		</div>
 	</div>
+	<footeroptions></footeroptions>
 </div>
