--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <script defer src="loading.js"></script>
     <script defer src="one.card.js"></script>
     <script defer src="footer.js"></script>
+    <script defer src="spreads.js"></script>
+    <script defer src="single.spread.js"></script>
+    <script defer src="career.js"></script>
+    <script defer src="love.js"></script>
+    <script defer src="consult.js"></script>
 </head>
 <body ng-app="TarotApp">
     <navbar></navbar>
