--- a/js/footer.html
+++ b/js/footer.html
@@ -10,7 +10,7 @@
         <h3>Minor Arcana</h3>
         <h5>Discover the cards that make up the four ancient suites; wands, cups swords, and pentacles.</h5>
       </div>
-      <div class="bottom-buttons col l4 m4 s12">
+      <div ui-sref="spreads" class="bottom-buttons col l4 m4 s12">
         <i class="large material-icons">vpn_key</i>
         <h3>Tarot Spreads</h3>
         <h5>Learn more about various types of tarot readings.</h5>
