--- a/js/three-card.html
+++ b/js/three-card.html
@@ -1,8 +1,21 @@
 <div id="three-card">
+	<div class="row z-depth-5" ng-if="modal" id="card-modal">
+		<div class="col s12 m4 l4">
+			<img id="modal-image" class="tarot-spread" src="{{cardImage}}">
+		</div>
+		<div class="col s12 m7 l7">
+			<p class="center-align">Your <span class="positionfont">{{position}}</span> situation is represented by...</p>
+			<h3 class="modal-header">{{cardName}}</h3>
+			<p class="center-align" ng-if="orientation == 0">...in the <span class="greenfont">upright</span> position which typically points to <em>{{upright}}</em></p>
+			<p class="center-align" ng-if="orientation == 1">...in the <span class="redfont">reversed</span> position which typically points to <em>{{reversed}}</em></p>
+			<p>{{cardDescription}}</p>
+			<div id="modal-button" ng-click="closeModal()" class="space tarot-button">Done</div>
+		</div>
+	</div>
 	<div class="row">
-		<h1 class="intro">Your Three-Card Reading</h1>
+		<h1 class="intro">Your <span class="red-text">Past, Present, Future</span> Reading</h1>
 		<h2 class="instructions">Click on each individual card to gain more insight</h2>
-		<div ng-repeat="card in cards" class="col s12 m4 l4">
+		<div ng-click="openModal(card)" ng-repeat="card in cards" class="col s12 m4 l4">
 			<div class="tarot-explanation">
 				<div class="description">
 					<h3>{{card.card.name}}</h3>
