--- a/js/love.html
+++ b/js/love.html
@@ -1,10 +1,10 @@
-<div id="one-card">
+<div id="three-card">
 	<div class="row z-depth-5" ng-if="modal" id="card-modal">
 		<div class="col s12 m4 l4">
 			<img id="modal-image" class="tarot-spread" src="{{cardImage}}">
 		</div>
 		<div class="col s12 m7 l7">
-			<p class="center-align">Your current state is represented by...</p>
+			<p class="center-align"><span class="positionfont">{{position}}</span>{{transition}}</p>
 			<h3 class="modal-header">{{cardName}}</h3>
 			<p class="center-align" ng-if="orientation == 0">...in the <span class="greenfont">upright</span> position which typically points to <em>{{upright}}</em></p>
 			<p class="center-align" ng-if="orientation == 1">...in the <span class="redfont">reversed</span> position which typically points to <em>{{reversed}}</em></p>
@@ -13,10 +13,22 @@
 		</div>
 	</div>
 	<div class="row">
-		<h1 class="intro">Your <span class="red-text">Current Situation</span> Reading</h1>
-		<h2 class="instructions">Click on the card to gain more insight</h2>
-		<div ng-repeat="card in cards" class="col s4 offset-s4 m2 offset-m5 l2 offset-l5">
-			<div ng-click="openModal(card)" class="tarot-explanation">
+		<h1 class="intro">Your <span class="red-text">Love</span> Reading</h1>
+		<h2 class="instructions">Click on each individual card to gain more insight</h2>
+		<div ng-click="openModal(card)" ng-repeat="card in cards1" class="col s12 m6 l6">
+			<div class="tarot-explanation">
+				<div class="description">
+					<h3>{{card.card.name}}</h3>
+					<p ng-if="card.orientation == 0" class="greenfont">Upright</P>
+					<p ng-if="card.orientation == 0">{{card.card.upright}}</p>
+					<p ng-if="card.orientation == 1" class="redfont">Reversed</P>
+					<p ng-if="card.orientation == 1" >{{card.card.reversed}}</p>
+				</div>
+				<img ng-class="{flip: card.orientation == 1}" class="tarot-spread" src="{{card.card.image}}">
+			</div>
+		</div>
+		<div ng-click="openModal(card)" ng-repeat="card in cards2" class="col s12 m4 l4">
+			<div class="tarot-explanation">
 				<div class="description">
 					<h3>{{card.card.name}}</h3>
 					<p ng-if="card.orientation == 0" class="greenfont">Upright</P>
