--- a/js/navbar.html
+++ b/js/navbar.html
@@ -5,8 +5,8 @@
 	      <ul id="nav-mobile" class="right hide-on-med-and-down">
 	        <li><a class="nav-links" ui-sref="majorArcana">Major Arcana</a></li>
 	        <li><a class="nav-links" ui-sref="minorArcana">Minor Arcana</a></li>
-	        <li><a class="nav-links" href="collapsible.html">Spreads</a></li>
-	        <li><a class="nav-links" href="collapsible.html">Consult</a></li>
+	        <li><a class="nav-links" ui-sref="spreads">Spreads</a></li>
+	        <li><a class="nav-links" ui-sref="consult">Consult</a></li>
 	      </ul>
 	    </div>
 	</nav>
