font change in single card reading

--- a/js/one-card.html
+++ b/js/one-card.html
@@ -4,7 +4,7 @@
 			<img id="modal-image" class="tarot-spread" src="{{cardImage}}">
 		</div>
 		<div class="col s12 m7 l7">
-			<p class="center-align">Your current state is represented by...</p>
+			<p class="center-align">Your <span class="positionfont">current</span> situation is represented by...</p>
 			<h3 class="modal-header">{{cardName}}</h3>
 			<p class="center-align" ng-if="orientation == 0">...in the <span class="greenfont">upright</span> position which typically points to <em>{{upright}}</em></p>
 			<p class="center-align" ng-if="orientation == 1">...in the <span class="redfont">reversed</span> position which typically points to <em>{{reversed}}</em></p>
